# bifurcate

./: Cargo.toml  README.md
src/: bisectable_impls.rs  lib.rs  nightly_polyfill.rs  traits.rs
src/bisectable_impls/: array_impl.rs  range_impl.rs  slice_impl.rs
src/nightly_polyfill/: step.rs
