[package]
name = "bifurcate"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/N9199/bifurcate"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
nightly = []
nightly_step = ["nightly"]
